<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.manuelperez.carrosmaterial.CrearCarro">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_carro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaPlacaE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPlacaE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placa" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/cmbMarcaE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbModeloE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbColorE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaPrecioE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPrecioE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editar"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/borrar" />
    </LinearLayout>
</LinearLayout>
