<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.manuelperez.carrosmaterial.CrearCarro">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPlaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placa" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/cmbMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cajaPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/borrar" />
    </LinearLayout>
</LinearLayout>
