<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgFoto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/marca" />

                    <TextView
                        android:id="@+id/lblMarca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:layout_marginTop="2sp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/modelo" />

                    <TextView
                        android:id="@+id/lblModelo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/color" />

                    <TextView
                        android:id="@+id/lblColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:layout_weight="1"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/lPlaca" />

                    <TextView
                        android:id="@+id/lblPlaca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/l_precio" />

                    <TextView
                        android:id="@+id/lblPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2sp"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>